src/env/snapshots/ntro__env__typehint_parser__tests__parse_type_hints-2.snap
---
source: src/env/typehint_parser.rs
expression: "Parser::new(\"@type number\").parse()"
---
Some(
    Number,
)
