src/env/snapshots/ntro__env__typehint_parser__tests__parse_type_hints-3.snap
---
source: src/env/typehint_parser.rs
expression: "Parser::new(\"@type boolean\").parse()"
---
Some(
    Boolean,
)
