src/env/snapshots/ntro__env__typehint_parser__tests__string_type_declaration.snap
---
source: src/env/typehint_parser.rs
expression: "Lexer::new(\"@type string\").collect::<Vec<_>>()"
---
[
    Token {
        kind: Keyword,
        start: 0,
        text: "@type",
    },
    Token {
        kind: StringType,
        start: 6,
        text: "string",
    },
]
